SERVER-26603 getLocalOplogCollection overwrite of CurOp namespace